# my-vim-config

./: .gitignore  coc-settings.json  install.sh  vim.git  vimrc
UltiSnips/: c.snippets  ddd.md  design_patterns.md  python.snippets  readme.md  sh.snippets
UltiSnips/all/: all.snippets  emoji.snippets
UltiSnips/c/: c.snippets
UltiSnips/css/: css.snippets
UltiSnips/markdown/: .plantuml.snippets.swp  mermaid.snippets  plantuml.snippets
UltiSnips/python/: sqlalchemy.snippets
UltiSnips/sh/: curl.snippets  jq.snippets  mysql.snippets  sh-ultisnips.snippets  sh.snippets  shopt.snippets
UltiSnips/sql/: fun.snippets  mysql-schema.snippets  sqlite-schema.snippets
UltiSnips/yaml/: openapi.snippets
bash/: bash_alias  bash_completion  bashrc  download.sh  git.sh  mvn.sh  ollama.sh  python.sh  readme.md  template.sh  template_config.sh  tmux.sh  vimspector.sh
bash/bash_completion_tips/: README.md  bash_completion_ignore  bypy  download.sh  ebook-convert  git  git.sh  go  jq  linux_performance_analysis_in_60_seconds__all  mvn  mvn.sh  nmap  nmcli  ocrmypdf  pandoc  python.sh  rsync  sed  sox  ssh  tmux  (+12 more)
bash/template/python_setuptools/: requirements.txt  setup.cfg  setup.py
bash/template/python_setuptools/tests/: test_example.py
colors/: vim8.vim  vimdefault.vim
config/: android.md  bash_completion  bashrc  software.md  swagger.md  taskwarrior-parent-link.sh  tmux.conf  ubuntu.md  w3m-config  w3m-keymap  windows.md
dconf/: dconf.sh  load_dconf.sh  one-half-dark-terminal.dconf
dict/: .words.swp  words
keymap/: idea-vim.keymap  vimium-keymap  w3m-keymap
(+86 files in other folders)
