[metadata]
name = $project_name
version = ${version}
author = ${author}
author_email = ${author_email}
description = `
    read -p "请输入项目说明: " use_description
    test -z "$use_description" && use_description=${description}
    echo $use_description
    `
long_description = file: README.md
long_description_content_type = text/markdown
url = '${url}/${project_name}'
project_urls =
    Bug Tracker = ${url}/${project_name}/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ${license}
    Operating System :: OS Independent

[options]
# test_suite = "tests",
packages = find:
python_requires = >=$python_version

